<resources>
    <string name="app_name">Packet Manipulator</string>

    <!-- Navigation drawer stuff -->
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>

    <!-- Sniffer options -->
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="navigation">Navigation</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="go_to_last">Go to last</string>
    <string name="go_to_first">Go to first</string>
    <string name="go_to">Go to …</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="live_capture">Live Capture</string>
    <string name="promiscuous">Promiscuous</string>
    <string name="please_choose_interface">Please choose interface</string>
    <string name="start_sniffer">Start sniffer</string>
    <string name="offline_capture">Offline Capture</string>
    <string name="choose_pcap_file">Choose pcap file</string>
</resources>
