<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/live_capture"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switchPromiscuous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promiscuous" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_interface" />

        <Spinner
            android:id="@+id/spnrInterface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnStartSniffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_sniffer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_capture"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnChooseFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_pcap_file" />
    </LinearLayout>
</LinearLayout>